# rfgn

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
RL_structure_relaxation_custom/: TD3_CGCNN.py  TD3_e3nn.py  requirements.txt  test.py
RL_structure_relaxation_custom/EAM/: Al.eam.alloy
RL_structure_relaxation_custom/structures/: Al2Fe18.csv  Al8Fe2.csv
RL_structure_relaxation_custom/utils/: convert_to_graph_e3nn.py  env.py  sac.py  td3.py  utils_model.py
a_rf_structure_relaxation_custom/: !test.ipynb  README.md  SAC_e3nn.py  TD3_M3GNet.py  TD3_e3nn.py  cgcnn_runner.py  compare_experiments.py  inference_visualize.py  m3gnet_runner.py  main.py
a_rf_structure_relaxation_custom/EAM/: AlFe.fs  Fe.eam.fs
a_rf_structure_relaxation_custom/Statistics/: Dataset_17.csv  Dataset_18.csv  Dataset_19.csv
a_rf_structure_relaxation_custom/structures/: Al-Fe_N=5.csv  AlFe.csv  AlandFe_mono.csv
a_rf_structure_relaxation_custom/tools/: plot_log.py  shutdown_task.ps1
a_rf_structure_relaxation_custom/utils/: aconfig.py  convert_to_graph_e3nn.py  down_csv.py  env.py  model_CGCNN.py  model_e3nn.py  model_m3gnet.py  replay_memory.py  td3.py  utils.py  utils_model.py
base/: resource.md
study_note/: env.sh  note.md  td3.md  td3.pptx  watch.py  weights_alloaction.md  环境描述符.md
td3e3nn/: README.md  atomic_properties.csv  pyproject.toml  todo.md
td3e3nn/structures/: Al-Fe_N=2-3.csv  Al-Fe_N=4.csv  AlFe7.csv
td3e3nn/utils/: calcs_func.py  convert_to_graph_e3nn.py  descriptors.py  env.py  model_e3nn copy.py  model_e3nn.py  replay_memory.py  td3.py
