[project]
name = "rfgn-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase==3.23.0",
    "e3nn==0.5.8",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "pandas==1.5.3",
    "pymatgen>=2024.5.1",
    "torch==2.5.1",
    "torch-cluster==1.6.3",
    "torch-geometric==2.6.1",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
]
